--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==23.1.0
 aiogram==2.25.1
 aiohttp==3.8.1
 aiosignal==1.3.1
+aiosqlite==0.18.0
 appdirs==1.4.4
 async-timeout==4.0.2
 attrs==22.2.0
@@ -21,6 +22,7 @@ multidict==6.0.4
 multitasking==0.0.11
 numpy==1.24.2
 pandas==1.5.3
+peewee==3.15.4
 pycparser==2.21
 python-dateutil==2.8.2
 python-dotenv==0.21.1
